<resources>
    <string name="app_name">Hiphe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_gallery_second">Hello GallerySecondFragment. Arg: %1$s</string>
    <string name="hello_slideshow_second">Hello SlideshowSecondFragment. Arg: %1$s</string>
    <string name="signin_hasmap_timestamp">EEE,dd mmm yyyy HH:mm aaa Z</string>
    <string name="mlkit_alert_thanks_closing">\n\nThanks and Regards,\nAditya Bavadekar \nSpecial Thanks: Google MLkit</string>
    <string name="alert_labeling_title">Result (from AI)</string>
    <string name="data">"\"           DETAILS\nMODEL : $model\nMANUFACTURER : $manufacturer\nUSER : $user\nID : $id\nDEVICE : $device\nBRAND : $brand\nPRODUCT : $product \nAndroid SDK Version : $androidOs\nAndroid Version : $androidOs\nAndroid Version : $androidOs\nAndroid Version : $androidOs\nAndroid Release Version : $androidVersion\nFree Space: $freeSpace\nTotal Space : $totalSpace\n\n        ***APP***\nPackage Name : $packageName\nVersion Name : $versionName\nVersion Code : $versionCode\nBuild Time : $time\nBuild Time : $time\nInstall Location : $installLoacation\nPermissions: $permissionsGranted\""\n\n</string>
    <string name="accept_sign_up"><![CDATA[Accept & Sign up]]></string>
    <string name="cancel">Cancel</string>
    <string name="disclaimer_signup">By tapping \"Accept &amp; Sign up\", you acknowledge that you have read the Privacy Policy and agree to the Terms of Service</string>
    <string name="crash_has_occurred">Crash has occurred</string>
    <string name="welcome_sub_note">Join over 300 million people who use Hiphe to talk with societies, communities and friends.</string>
    <string name="try_otp_authentication">Try OTP authentication</string>
    <string name="password_should_be">Password should be at least 8 characters long.</string>
    <string name="title_login">Login</string>
    <string name="excitement_to_login">We\'re too excited to see you again!</string>
    <string name="title_email_address">Email Address</string>
    <string name="title_password">Password</string>
    <string name="title_forgot_your_password">Forgot your password?</string>
    <string name="title_country_code">Code</string>
    <string name="titlephone">Phone</string>
    <string name="title_send_sms">Send SMS</string>
    <string name="___sign_up">"Sign up"</string>
    <string name="____login">"Login"</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_confirm_password">Confirm Password</string>
    <string name="title_sign_up">Sign up</string>
    <string name="title_name">Name</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="textview_email_address">"EMAIL ADDRESS : "</string>
    <string name="textview_phone">PHONE :</string>
    <string name="textview_full_name">FULL NAME :</string>
    <string name="account_info">Account Info</string>
    <string name="adityabavadekarapps">\@adityabavadekarapps</string>
    <string name="about_hiphe">About Hiphe</string>
    <string name="logout">LOGOUT</string>
    <string name="hiphe_and_ai">Hiphe and AI</string>
    <string name="are_you_sure_logout_message">This would Log you out from the app. <small>You will have to Login or SignUp again in order to use this app.</small> Are you sure you want to Logout?\nTip: if you prefer to Logout when knowing you will Login later, you can click \"Remember and Logout\" so that your credentials would be remembered and you would be asked if you want to login with this account</string>
    <string name="powered_by_hiphe">Powered by Hiphe</string>
    <string name="ok">OK</string>
    <string name="send_a_hi">Send a \"Hi\"</string>
    <string name="title_activity_hiphe_settings">HipheSettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="notifications_header">Notifications</string>
    <string name="mobile_notifications_header">Mobile Notifications</string>
    <string name="you_h_header">You and Hiphe</string>
    <string name="advanced_header">Advanced</string>
    <string name="more_header">More</string>
    <string name="theme_header">Theme</string>
    <string name="faqs_header">FAQs</string>
    <string name="crash_rprting_header">Disable sending Crash Reports &amp; Data</string>
    <string name="send_crash_rprting_header">Send Logs and data</string>
    <string name="crash_and_data_header">Crashes and data</string>
    <string name="browse_header">Browse</string>
    <string name="reporting_header">Reporting Problems</string>
    <string name="sync_header">Sync</string>
    <string name="notifications_pref_title">Notifications settings</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="theme_pref_title">Choose theme</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="default_version_detail_text">No information available</string>
    <string name="remember_logout">Remember and Logout</string>
    <string name="crash_report_summary">This Application by defaults send us crash data if any but you can disable it here. Primarily Crash reports help us diagnose problems and improve.</string>
    <string name="_0ops_looks_like_you_are_offline_n_nno_worries_docs_downloaded_for_offline_use_will_always_be_there_even_in_offline_mode"><b>0ops! looks like you are offline</b>\n\nNo worries docs downloaded for offline use will always be there even in offline mode.</string>
    <string name="dashboard">Dashboard</string>
    <string name="dynamic_link_uri_prefix">https://hiphe.page.link</string>
    <string name="deeplink_url">https://hiphe.adityaamolbavadekar.com/users</string>
    <string name="title_offline_no_connection">Offline (No connection)</string>
    <string name="title_back_online">Back online</string>
    <string name="oops_something_went_wrong"><b><big>0ops! something went wrong</big></b>\n\n<i><small>THAT\'S ALL WE KNOW</small></i>\n\n\n</string>
    <string name="error_nrequested_user_was_not_found_nplease_recheck_the_url">Error! \nRequested User was not found\nPlease recheck the Link</string>
    <string name="email_address_formatted">EMAIL ADDRESS : %1$s</string>
    <string name="user_id_formatted">USER ID : %1$s \nThis parameter is generated for cases where you loose password or when you want to delete your account, you will be asked for you USERID</string>
    <string name="user_name_formatted">USER NAME : %1$s</string>
    <string name="created_on_formatted">CREATED ON : %1$s</string>
    <string name="send_logs_and_data_summary_click_here_to_send">You can share these directly to the developer team : teamhiphe@gmail.com. Click here to get logs and data</string>
    <string name="ok_got_it">OK, GOT IT</string>
    <string name="visitor_welcome_to_hiphe">Welcome to Hiphe</string>
    <string name="no_thanks">NO, THANKS</string>
    <string name="ok_update_hiphe">OK Update Hiphe</string>
    <string name="gitHub_developer_name">AdityaBavadekar</string>
    <string name="no_update_required">No Update Required</string>
    <string name="your_are_on_latest_version_of_hiphe_formatted">You are on latest stable version of Hiphe i.e.%1$s \nRelease Notes :\n%2$s\n</string>
    <string name="updated_version_of_hiphe_is_available_formatted">Hiphe Update Version %1$s is the latest version available to download.\nYou are on Version %2$s of Hiphe. \n\nRelease Notes of %3$s:\n%4$s</string>
    <string name="updated_version_of_hiphe_is_available_preference_formatted">Hiphe Update Version %1$s is available.</string>
    <string name="error_opening_downloaded_file">Error opening downloaded file</string>
    <string name="we_will_download_apk_in_background">We will download APK in background</string>
    <string name="updating_hiphe">Updating Hiphe…</string>
    <string name="hiphe_github_terms_and_conditions_url">https://github.com/AdityaBavadekar/Hiphe/blob/main/src/main/Terms%20%26%20Conditions.md</string>
    <string name="hiphe_github_privacy_policy_url">https://github.com/AdityaBavadekar/Hiphe/blob/main/src/main/HiphePrivacyPolicy.md</string>
    <string name="error_making_call_to_changelog_json_url">\"Error making call to %1$s/changelog.json: \"</string>
    <string name="user_is_logged_in_initiating_normal_call">User is logged in, initiating normal call</string>
    <string name="User_is_not_logged_in_initiating_classic_call">User is not logged in, initiating classic call</string>
    <string name="you_are_offline">You are offline!</string>
    <string name="logs">LOGS</string>
    <string name="Initiating_MODE_NIGHT_YES">Initiating MODE_NIGHT_YES</string>
    <string name="Initiating_MODE_NIGHT_NO">Initiating MODE_NIGHT_NO</string>
    <string name="Initiating_MODE_NIGHT_FOLLOW_SYSTEM">Initiating MODE_NIGHT_FOLLOW_SYSTEM</string>
    <string name="error_while_initiating_theme">\"Error while Initiating Theme \"</string>
    <string name="user_is_a_newcomer_asking_him_if_he_wants_to_be_guided">User is a newcomer, asking him if he wants to be guided</string>
    <string name="welcome_it_is_our_pleasure_to_see_you_dialog_message">Welcome\n\nIt is our pleasure to see you. \nHere are some quick thing you can do :\n\n*View About Hiphe\n*Explore list of posts\n*Do your customisations in settings\n*Now, you can even send us feedback from settings\n*You can browse FAQs from settings\n\nOr do you want to take a quick tour to our app? \nIf yes, click \"OK\"</string>
    <string name="User_AGREED_to_take_a_tour">User AGREED to take a tour</string>
    <string name="User_DISAGREED_to_take_a_tour">User DISAGREED to take a tour</string>
    <string name="User_is_logging_out_without_remembrance__signuot">User is logging out without remembrance, googleSignInClient.revokeAccess() auth.signOut()</string>
    <string name="User_is_logging_out_with_remembrance__signuot">User is logging out with remembrance, googleSignInClient.revokeAccess() auth.signOut()</string>
    <string name="first_guess_with_confidence_level_of">%1$s is first guess with confidence level of %2$s percent FROM ARTIFICIAL INTELLIGENCE </string>
    <string name="report_a_crash">Report a crash</string>
    <string name="hiphe_crash">Hiphe Crash</string>
    <string name="Triggering_createAchooser_due_to_a_Crash">Triggering createAchooser due to a Crash!!!</string>
    <string name="please_send_this_crash_data_to_developer">Please send this crash data to developer</string>
    <string name="Triggering_Crash_Upload_and_then_SystemExit_due_to_disabled_share_crash_data_in_settings">Triggering Crash Upload and then SystemExit(404) due to disabled share crash data in settings!!!</string>
</resources>