<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021. Aditya Bavadekar
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_ai"
            android:icon="@drawable/ic_outline_info_24"
            android:title="@string/hiphe_and_ai" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/account_info" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_outline_info_24"
            android:title="@string/about_hiphe" />
        <item
            android:id="@+id/dialogActivity"
            android:icon="@drawable/ic_baseline_event_note_24"
            android:title="Hiphe Notes" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_applications_24"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_baseline_dashboard_24"
            android:title="@string/dashboard" />
    </group>
</menu>