<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021. Aditya Bavadekar
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.adityaamolbavadekar.hiphe.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.adityaamolbavadekar.hiphe.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.adityaamolbavadekar.hiphe.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.adityaamolbavadekar.hiphe.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.adityaamolbavadekar.hiphe.ui.account.AccountFragment"
        android:label="Account Info"
        tools:layout="@layout/account_info_page_fragment">

        <deepLink
            android:id="@+id/deepLink"
            android:autoVerify="true"
            app:uri="https://hiphe.page.link/myaccount" />
    </fragment>
    <fragment
        android:id="@+id/nav_about"
        android:name="com.adityaamolbavadekar.hiphe.ui.about.AboutFragment"
        android:label="About Hiphe">
        <!--        <deepLink android:autoVerify="true" app:uri=""-->

        <deepLink
            android:id="@+id/deepLink"
            android:autoVerify="true"
            app:uri="https://hiphe.page.link/i" />
    </fragment>
    <activity
        android:id="@+id/nav_settings"
        android:name="com.adityaamolbavadekar.hiphe.HipheSettingsActivity"
        android:label="Settings"
        tools:layout="@layout/settings_activity" />
    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.adityaamolbavadekar.hiphe.ui.dashboard.HomeFragmentMain"
        android:label="Home"
        tools:layout="@layout/fragment_home_main" />
    <activity
        android:id="@+id/dialogActivity"
        android:name="com.adityaamolbavadekar.hiphe.DialogActivity"
        android:label="Notes"
        tools:layout="@layout/activity_dialog_crash" />
</navigation>